--- a/website/homePage.html
+++ b/website/homePage.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="css/responsive.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
      <!-- Hide this line for IE (needed for Firefox and others) -->
      <![if !IE]>
-     <link rel="icon" href="http://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
+     <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
      <![endif]>
      <!-- This is needed for IE -->
-     <link rel="shortcut icon" href="http://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
+     <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
 
 </head>
 
