Updated the site for secure https calls

--- a/website/index.html
+++ b/website/index.html
@@ -16,10 +16,10 @@
 
      <!-- Hide this line for IE (needed for Firefox and others) -->
      <![if !IE]>
-     <link rel="icon" href="http://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
+     <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
      <![endif]>
      <!-- This is needed for IE -->
-     <link rel="shortcut icon" href="http://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
+     <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
 
 </head>
 
