--- a/website/homePage.html
+++ b/website/homePage.html
@@ -8,6 +8,7 @@
  <title>Walking Stalking Robots</title>
 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Fredericka+the+Great" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -36,7 +37,7 @@
     <a href="homePage.html">Home</a>
     <a href="#music">Music</a>
     <a href="#shows">Shows</a>
-    <a href="video.html">Video</a>
+    <a href="#contact">Contact</a>
         </div>
       </div>
     </div>
@@ -53,8 +54,16 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+
       <div class="item active">
-        <img src="img/WSR_fourth.jpg" alt="Playing for a big croud" width="1200px" height="700px">
+        <img src="img/WSR_fourth_group.jpg" alt="The band preforming" width="1200px" height="700px">
+        <div class="carousel-caption">
+          <p>Photo by: Patrick Luhrs</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img/WSR_fourth.jpg" alt="Playing for a big croud" width="1080px" height="700px">
         <div class="carousel-caption">
           <p>Photo by: Mathieu Lewis-Rolland</p>
         </div>
@@ -67,12 +76,7 @@
         </div>
       </div>
 
-      <div class="item">
-        <img src="img/WSR_fourth_group.jpg" alt="The band preforming" width="1200px" height="700px">
-        <div class="carousel-caption">
-          <p>Photo by: Patrick Luhrs</p>
-        </div>
-      </div>
+
     </div>
 
     <!-- Left and right controls -->
@@ -101,12 +105,27 @@
 	<div class='learn-more'>
 	 <h2>Shows</h2>
 	  <div class='links'>
-	<a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. We're too busy with other stuff...</p>
+	<a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p>
 
    <!-- <a href="http://www.roseandthistlepdx.com/" target="_blank"><p>-The Rose and Thistle, September 17th,</p><p>Portland OR.</p> -->
     </div>
     <a href="homePage.html"><p>TOP</p></a>
-</div>
+ 
+
+    <div id="contact">
+    <div class='contact'>
+     <h2>How to Reach Out</h2>
+       <p>Please send any questions,</p>
+        <p>comments or song requests to</p>
+       <p>
+        <a href="mailto:walkingstalkingrobots@gmail.com?subject=Please%20HELP&body=I%20NEED%20YOUR%20MUSIC%20IN%20MY%20EARS%20NOW%20."> 
+        Walkingstalkingrobots@gmail.com
+     </a>
+    </p>
+    <a href="homePage.html"><p>TOP</p></a>
+    </div>
+   </div>
+
 
 
 		<div class="nav">
@@ -123,7 +142,7 @@
 
 
 			<div class="footer">
-			 <p> &copy; Walking Stalking Robots. 2016</p>
+			 <p> &copy; Walking Stalking Robots. 2024</p>
 			</div>
 
 
