--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Fredericka+the+Great" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Puddles&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
 
      <link rel="stylesheet" href="css/responsive.css">
