One. Last. Fix. Before bed. :)

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -119,7 +119,7 @@
        <p>Please send any questions,</p>
         <p>comments or song requests to</p>
        <p>
-        Walkingstalkingrobots@gmail.com
+        walkingstalkingrobots@gmail.com
     </p>
     <a href="homePage.html"><p>TOP</p></a>
    </div>
