--- a/website/homePage.html
+++ b/website/homePage.html
@@ -123,7 +123,7 @@
 
 
 			<div class="footer">
-			 <p> &copy; Walking Stalking Robots. 2016</p>
+			 <p> &copy; Walking Stalking Robots. 2014 - <span id="currentYear"></span></p>
 			</div>
 
 
