Changed the link for the demo to go to soundcloud instead of bandcamp

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -95,7 +95,7 @@
 <div class='music'>
  <h2>Music</h2>
   <div class='links'>
-  <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"><img src="img/WSR_disc_img.jpg"</img><p>Demonstration</p></a>
+  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/WSR_disc_img.jpg"</img><p>Demonstration</p></a>
   </div>
   <a href="homePage.html"><p>TOP</p></a>
 </div>
