Added tomorrows show

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -105,9 +105,9 @@
 	<div class='learn-more'>
 	 <h2>Shows</h2>
 	  <div class='links'>
-	<a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p>
+	<!-- <a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p> -->
 
-   <!-- <a href="http://www.roseandthistlepdx.com/" target="_blank"><p>-The Rose and Thistle, September 17th,</p><p>Portland OR.</p> -->
+   <a href="https://www.instagram.com/shanghaitunnelbar/?hl=enhttp://www.roseandthistlepdx.com/" target="_blank"><p>-The Shanghai Tunnel Bar, November 8th,</p><p>Portland OR.</p>
     </div>
     <a href="homePage.html"><p>TOP</p></a>
   </div>
