--- a/website/homePage.html
+++ b/website/homePage.html
@@ -107,7 +107,7 @@
 	  <div class='links'>
 	<!-- <a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p> -->
 
-   <a href="https://www.instagram.com/shanghaitunnelbar/?hl=enhttp://www.roseandthistlepdx.com/" target="_blank"><p>-The Shanghai Tunnel Bar, November 8th,</p><p>Portland OR.</p>
+   <a href="https://www.instagram.com/shanghaitunnelbar/?hl=enhttp://www.roseandthistlepdx.com/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th,</p><p>Portland OR.</p>
     </div>
     <a href="homePage.html"><p>TOP</p></a>
   </div>
