--- a/website/homePage.html
+++ b/website/homePage.html
@@ -108,7 +108,7 @@
 	<a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p>
 
     <!-- Here lies the last show we played. May it rest in rock heaven... I hope I get to go to rock heaven... Sounds pretty cool... -->
-   <!-- <a href="https://www.instagram.com/shanghaitunnelbar/?hl=enhttp://www.roseandthistlepdx.com/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
+   <!-- <a href="https://www.instagram.com/shanghaitunnelbar/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
     </div>
     <a href="homePage.html"><p>TOP</p></a>
   </div>
