Added description to logo. Very important!!

--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
   <!-- dropdown menu button -->
 
 	<div class="handpic">
-	   <a href="homePage.html"><img src ="img/wsr copy.jpg"></a>
+	   <a href="homePage.html" alt="Original WSR Logo with a robot hand holding a cassette tape that says Walking Stalking Robots on the label."><img src ="img/wsr copy.jpg"></a>
 	</div>
   <p class="click">click logo to enter</p>
 </header>
