--- a/website/homePage.html
+++ b/website/homePage.html
@@ -70,9 +70,9 @@
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth_TP.jpg" alt="Tarl and Paul playing" width="1200px" height="700px">
+        <img src="website/img/Live_At_Kelly's.jpg" alt="Tarl and Paul playing" width="1200px" height="700px">
         <div class="carousel-caption">
-          <p>Photo by: Patrick Luhrs</p>
+          <p>Live at Kelly's. Photo credit unknown.</p>
         </div>
       </div>
 
