--- a/website/homePage.html
+++ b/website/homePage.html
@@ -70,7 +70,7 @@
       </div>
 
       <div class="item">
-        <img src="website/img/Live_At_Kelly's.jpg" alt="Tarl and Paul playing" width="1200px" height="700px">
+        <img src="img/Live_At_Kelly's.jpg" alt="Tarl and Paul playing" width="1200px" height="700px">
         <div class="carousel-caption">
           <p>Live at Kelly's. Photo credit unknown.</p>
         </div>
