Moved the newer photo to the active photo

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -55,7 +55,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
 
-      <div class="item active">
+      <div class="item">
         <img src="img/WSR_fourth_group.jpg" alt="The band preforming" width="1200px" height="700px">
         <div class="carousel-caption">
           <p>Photo by: Patrick Luhrs</p>
@@ -69,10 +69,10 @@
         </div>
       </div>
 
-      <div class="item">
+      <div class="item active">
         <img src="img/Live_At_Kelly's.jpg" alt="Tarl and Paul playing" width="1200px" height="700px">
         <div class="carousel-caption">
-          <p>Live at Kelly's. Photo credit unknown.</p>
+          <p>Live at Kelly's.</p>
         </div>
       </div>
 
