--- a/website/homePage.html
+++ b/website/homePage.html
@@ -76,6 +76,13 @@
         </div>
       </div>
 
+      <div class="item">
+        <img src="img/WSR_House_show.jpeg" alt="Playing for a house show" width="1080px" height="700px">
+          <div class="carousel-caption">
+              <p></p>
+          </div>
+      </div>
+
 
     </div>
 
