Fixin the carousel

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -80,7 +80,7 @@
       <div class="item">
         <img src="img/WSR_House_show.jpeg" alt="Playing for a house show" width="1080px" height="700px">
           <div class="carousel-caption">
-              <p></p>
+              <p>Live in a house</p>
           </div>
       </div>
 
