--- a/website/homePage.html
+++ b/website/homePage.html
@@ -57,33 +57,35 @@
     <div class="carousel-inner" role="listbox">
       
       <div class="item active">
-        <img src="img/Live_At_Kelly's.jpg" alt="Tarl and Paul playing" width="1080px" height="600px">
+        <img src="img/Live_At_Kelly's.jpg" alt="Tarl, Scott and Paul playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
         <div class="carousel-caption">
           <p>Live at Kelly's.</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth.jpg" alt="Playing for a big croud" width="1080px" height="700px">
+        <img src="img/WSR_fourth.jpg" alt="The band playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
         <div class="carousel-caption">
+          <p> Fourth of July Show. </p>
           <p>Photo by: Mathieu Lewis-Rolland</p>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/WSR_House_show.jpeg" alt="Playing for a house show" width="1080px" height="800px">
+        <img src="img/WSR_House_show.jpeg" alt="The band playing for a house show in Portland, OR." width="1080px" height="800px">
           <div class="carousel-caption">
               <p>Live in a house</p>
           </div>
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth_group.jpg" alt="The band preforming" width="1200px" height="700px">
+        <img src="img/WSR_fourth_group.jpg" alt="The band preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
         <div class="carousel-caption">
+          <p> Fourth of July Show. </p>
           <p>Photo by: Patrick Luhrs</p>
         </div>
       </div>
-      
+
     </div>
 
     <!-- Left and right controls -->
