--- a/website/homePage.html
+++ b/website/homePage.html
@@ -59,7 +59,7 @@
       <div class="item active">
         <img src="img/Live_At_Kelly's.jpg" alt="Tarl, Scott and Paul playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
         <div class="carousel-caption">
-          <p>Live at Kelly's.</p>
+          <p>Live at Kelly's Olympian.</p>
         </div>
       </div>
 
