--- a/website/homePage.html
+++ b/website/homePage.html
@@ -66,7 +66,7 @@
       <div class="item">
         <img src="img/WSR_fourth.jpg" alt="The band playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
         <div class="carousel-caption">
-          <p> Fourth of July Show. </p>
+          <p> Fourth of July Show</p>
           <p>Photo by: Mathieu Lewis-Rolland</p>
         </div>
       </div>
@@ -74,14 +74,14 @@
       <div class="item">
         <img src="img/WSR_House_show.jpeg" alt="The band playing for a house show in Portland, OR." width="1080px" height="800px">
           <div class="carousel-caption">
-              <p>Live in a house</p>
+              <p>Live in a House</p>
           </div>
       </div>
 
       <div class="item">
         <img src="img/WSR_fourth_group.jpg" alt="The band preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
         <div class="carousel-caption">
-          <p> Fourth of July Show. </p>
+          <p> Fourth of July Show</p>
           <p>Photo by: Patrick Luhrs</p>
         </div>
       </div>
