--- a/website/homePage.html
+++ b/website/homePage.html
@@ -136,9 +136,10 @@
 
 
 		<div class="nav">
-
-			<a href='https://www.facebook.com/dorobotssleepwithelectricdreams' target="_blank"><p>
-			 <img src= "img/facebook.png" alt="Facebook Logo" /></a>
+       <!-- We don't really use Facebook at all anymore, so there is no point keeping it visible. 
+        But... to the nerdy individual who is reading these comments, I hope you enjoy the Philip K Dick Reference / play on a title of his. :) -->
+			<!-- <a href='https://www.facebook.com/dorobotssleepwithelectricdreams' target="_blank"><p>
+			 <img src= "img/facebook.png" alt="Facebook Logo" /></a> -->
 
 
 			 <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/soundcloud.png" alt= "Soundcloud Logo"/></a>
