--- a/website/homePage.html
+++ b/website/homePage.html
@@ -59,7 +59,7 @@
       <div class="item active">
         <img src="img/Live_At_Kelly's.jpg" alt="Tarl, Scott and Paul playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
         <div class="carousel-caption">
-          <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8"><p>Live at Kelly's Olympian</p></a>
+          <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8" target="_blank"><p>Live at Kelly's Olympian</p></a>
         </div>
       </div>
 
