--- a/website/homePage.html
+++ b/website/homePage.html
@@ -104,7 +104,7 @@
 <div class='music'>
  <h2>Music</h2>
   <div class='links'>
-  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/WSR_disc_img.jpg"</img><p>Demonstration</p></a>
+  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/WSR_disc_img.jpg"></img><p>Demonstration</p></a>
   </div>
       <div class="nav">
         <!-- We don't really use Facebook at all anymore, so there is no point keeping it visible. 
@@ -116,7 +116,7 @@
         <a href="https://soundcloud.com/walking-stalking-robots" target="_blank" id="MusicStream"><img src="img/soundcloud.png" alt="Soundcloud Logo" /></a>
       
       
-        <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank" id="MusicStream"><img src="img/icon_bandcamp.png" alt="Bandcamp Logo." /></a>
+        <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"></a>><img src="img/icon_bandcamp.png" id="MusicStream" alt="Bandcamp Logo." /></a>
       </div>
   <a href="homePage.html"><p>TOP</p></a>
 </div>
