--- a/website/homePage.html
+++ b/website/homePage.html
@@ -138,7 +138,7 @@
      <h2>How to Reach Out</h2>
        <p>Please send any questions,</p>
         <p>comments or song requests to</p>
-       <p><a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a></p>
+       <p><a href="mailto:walkingstalkingrobots@gmail.com"><u>walkingstalkingrobots@gmail.com</u></a></p>
 
     <a href="homePage.html"><p>TOP</p></a>
    </div>
