--- a/website/homePage.html
+++ b/website/homePage.html
@@ -116,7 +116,7 @@
 
         <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"><img src="img/icon_bandcamp.png" id="MusicStream" alt="Bandcamp Logo." /></a>
       </div>
-  <a href="homePage.html"><p>TOP</p></a>
+  <a href="homePage.html"><p><u>TOP</u></p></a>
 </div>
 
   <div id="shows">
@@ -129,7 +129,9 @@
     <!-- Here lies the last show we played. May it rest in rock heaven... I hope I get to go to rock heaven... Sounds pretty cool... -->
    <!-- <a href="https://www.instagram.com/shanghaitunnelbar/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
     </div>
-    <a href="homePage.html"><p>TOP</p></a>
+    <a href="homePage.html"><p><u>TOP</u></p></a>
+   </div>
+</a>
   </div>
 
     <div id="contact">
@@ -140,7 +142,7 @@
         <p>comments or song requests to</p>
        <p><a href="mailto:walkingstalkingrobots@gmail.com"><u>walkingstalkingrobots@gmail.com</u></a></p>
 
-    <a href="homePage.html"><p>TOP</p></a>
+    <a href="homePage.html"><p><u>TOP</u></p></a>
    </div>
 
 
