--- a/website/homePage.html
+++ b/website/homePage.html
@@ -133,7 +133,7 @@
    </div>
 </a>
   </div>
-    <div class='contact'>
+    <div class='contact' id="contact">
      <h2>How to Reach Out</h2>
        <p>Please send any questions,</p>
         <p>comments or song requests to</p>
