--- a/website/homePage.html
+++ b/website/homePage.html
@@ -64,10 +64,10 @@
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth.jpg" alt="The band playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
+        <img src="img/WSR_fourth.jpg" alt="Walking Stalking Robots playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
-          <p>Photo by: Mathieu Lewis-Rolland</p>
+          <a href="https://www.mathieulewisrolland.com/bio"><p>Photo by: Mathieu Lewis-Rolland</p></a>
         </div>
       </div>
 
@@ -82,7 +82,7 @@
         <img src="img/WSR_fourth_group.jpg" alt="The band preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
-          <p>Photo by: Patrick Luhrs</p>
+          <a href="http://www.patrickluhrs.com"><p>Photo by: Patrick Luhrs</p></a>
         </div>
       </div>
 
