--- a/website/homePage.html
+++ b/website/homePage.html
@@ -57,14 +57,14 @@
     <div class="carousel-inner" role="listbox">
       
       <div class="item active">
-        <img src="img/Live_At_Kelly's.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
+        <img src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
         <div class="carousel-caption">
           <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8" target="_blank"><p>Live at Kelly's Olympian</p></a>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
+        <img src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
           <a href="https://www.mathieulewisrolland.com/bio" target="_blank"><p>Photo by: Mathieu Lewis-Rolland</p></a>
@@ -72,14 +72,14 @@
       </div>
 
       <div class="item">
-        <img src="img/WSR_House_show.jpeg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR." width="1080px" height="800px">
+        <img src="img/walking_stalking_robots_house_show.jpeg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR." width="1080px" height="800px">
           <div class="carousel-caption">
               <p>Live in a House</p>
           </div>
       </div>
 
       <div class="item">
-        <img src="img/WSR_fourth_group.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
+        <img src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
           <a href="http://www.patrickluhrs.com" target="_blank"><p>Photo by: Patrick Luhrs</p></a>
@@ -98,7 +98,7 @@
       <span class="sr-only">Next</span>
     </a>
 </div>
-
+PUT https://www.googleapis.com/webmasters/v3/sites/https://www.walkingstalkingrobots.com/sitemaps/https://www.walkingstalkingrobots.com/sitemap.xml
 <div id="music">
 </div>
 <div class='music'>
