--- a/website/video.html
+++ b/website/video.html
@@ -31,9 +31,9 @@
   <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Stuff</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="homePage.php">Home</a>
-    <a href="homePage.php#music">Music</a>
-    <a href="homePage.php#shows">Shows</a>
+    <a href="homePage.html">Home</a>
+    <a href="homePage.html#music">Music</a>
+    <a href="homePage.html#shows">Shows</a>
     <a href="video.html">Video</a>
         </div>
       </div>
