--- a/website/homePage.html
+++ b/website/homePage.html
@@ -34,7 +34,7 @@
 <div class="dropdown">
 <button onclick="myFunction()" class="dropbtn">Stuff</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="homePage.hmtl">Home</a>
+    <a href="homePage.html">Home</a>
     <a href="#music">Music</a>
     <a href="#shows">Shows</a>
     <a href="#contact">Contact</a>
