--- a/website/homePage.html
+++ b/website/homePage.html
@@ -35,7 +35,7 @@
 <button onclick="myFunction()" class="dropbtn">Stuff</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="homePage.html">Home</a>
-    <a href="#music">Music</a>
+    <a href="https://walkingstalkingrobots.com/#music">Music</a>
     <a href="#shows">Shows</a>
     <a href="#contact">Contact</a>
         </div>
@@ -57,14 +57,14 @@
     <div class="carousel-inner" role="listbox">
       
       <div class="item active">
-        <img src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
         <div class="carousel-caption">
           <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8" target="_blank"><p>Live at Kelly's Olympian</p></a>
         </div>
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
           <a href="https://www.mathieulewisrolland.com/bio" target="_blank"><p>Photo by: Mathieu Lewis-Rolland</p></a>
@@ -72,14 +72,14 @@
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_house_show.jpeg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR." width="1080px" height="800px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_house_show.jpeg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR." width="1080px" height="800px">
           <div class="carousel-caption">
               <p>Live in a House</p>
           </div>
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
           <a href="http://www.patrickluhrs.com" target="_blank"><p>Photo by: Patrick Luhrs</p></a>
@@ -103,7 +103,7 @@
 <div class='music'>
  <h2>Music</h2>
   <div class='links'>
-  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/WSR_disc_img.jpg"></img><p>Demonstration</p></a>
+  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="https://walkingstalkingrobots.com/img/WSR_disc_img.jpg"></img><p>Demonstration</p></a>
   </div>
       <div class="nav">
         <!-- We don't really use Facebook at all anymore, so there is no point keeping it visible. 
