--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
           <button onclick="myFunction()" class="dropbtn">Stuff</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="homePage.html">Home</a>
-            <a href="#music">Music</a>
+            <a href="https://walkingstalkingrobots.com/#music">Music</a>
             <a href="#shows">Shows</a>
             <a href="#contact">Contact</a>
           </div>
@@ -58,7 +58,8 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
+        <img
+          src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
           width="1080px" height="600px">
         <div class="carousel-caption">
@@ -69,7 +70,7 @@
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
           width="1080px" height="700px">
         <div class="carousel-caption">
@@ -81,7 +82,7 @@
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_house_show.jpeg"
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_house_show.jpeg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
           width="1080px" height="800px">
         <div class="carousel-caption">
@@ -90,7 +91,7 @@
       </div>
 
       <div class="item">
-        <img src="img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
           alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
           width="1200px" height="700px">
         <div class="carousel-caption">
@@ -118,7 +119,8 @@
   <div class='music'>
     <h2>Music</h2>
     <div class='links'>
-      <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/WSR_disc_img.jpg"></img>
+      <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img
+          src="https://walkingstalkingrobots.com/img/WSR_disc_img.jpg"></img>
         <p>Demonstration</p>
       </a>
     </div>
