Adding more links. This is supposed to help, but we shall see.

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -34,10 +34,10 @@
 <div class="dropdown">
 <button onclick="myFunction()" class="dropbtn">Stuff</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="homePage.html">Home</a>
+    <a href="https://walkingstalkingrobots.com/homePage.html">Home</a>
     <a href="https://walkingstalkingrobots.com/#music">Music</a>
-    <a href="#shows">Shows</a>
-    <a href="#contact">Contact</a>
+    <a href="https://walkingstalkingrobots.com/#shows">Shows</a>
+    <a href="https://walkingstalkingrobots.com/#contact">Contact</a>
         </div>
       </div>
     </div>
