Trying a new contact card

--- a/website/homePage.html
+++ b/website/homePage.html
@@ -1,50 +1,49 @@
 <!DOCTYPE HTML>
 <!-- Web design and development by Paul Hubbard-->
 <html lang='en'>
+
 <head>
- <meta charset="utf-8">
- <meta http-equiv='X-UA-Compatible' content='IE=edge'>
- <meta name='viewport' content='width=device-width, initial-scale=1'>
- <title>Walking Stalking Robots</title>
+  <meta charset="utf-8">
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Walking Stalking Robots</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Fredericka+the+Great" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Fredericka+the+Great" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-     <!-- Hide this line for IE (needed for Firefox and others) -->
-     <![if !IE]>
-     <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
-     <![endif]>
-     <!-- This is needed for IE -->
-     <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- Hide this line for IE (needed for Firefox and others) -->
+  <![if !IE]>
+  <link rel="icon" href="https://walkingstalkingrobots.com/images/wsr.jpg" type="image/x-icon" />
+  <![endif]>
+  <!-- This is needed for IE -->
+  <link rel="shortcut icon" href="https://walkingstalkingrobots.com/img/wsr.jpg" type="image/ico" />
 
 </head>
 
 <body>
   <!-- dropdown menu button -->
-
-
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-<div class="dropdown">
-<button onclick="myFunction()" class="dropbtn">Stuff</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="https://walkingstalkingrobots.com/homePage.html">Home</a>
-    <a href="https://walkingstalkingrobots.com/#music">Music</a>
-    <a href="https://walkingstalkingrobots.com/#shows">Shows</a>
-    <a href="https://walkingstalkingrobots.com/#contact">Contact</a>
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">Stuff</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="https://walkingstalkingrobots.com/homePage.html">Home</a>
+            <a href="https://walkingstalkingrobots.com/#music">Music</a>
+            <a href="https://walkingstalkingrobots.com/#shows">Shows</a>
+            <a href="https://walkingstalkingrobots.com/#contact">Contact</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -55,34 +54,49 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      
+
       <div class="item active">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR." width="1080px" height="600px">
+        <img
+          src="https://walkingstalkingrobots.com/img/walking_stalking_robots_live_at_kellys_olympian_portland_oregon.jpg"
+          alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing at Kelly's Olympian in Portland, OR."
+          width="1080px" height="600px">
         <div class="carousel-caption">
-          <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8" target="_blank"><p>Live at Kelly's Olympian</p></a>
+          <a href="https://maps.app.goo.gl/v9p7cmXRVefuSbgg8" target="_blank">
+            <p>Live at Kelly's Olympian</p>
+          </a>
         </div>
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July." width="1080px" height="700px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_large_crowd.jpg"
+          alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a big croud on the US holiday Indenpence Day, or the Fourth of July."
+          width="1080px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
-          <a href="https://www.mathieulewisrolland.com/bio" target="_blank"><p>Photo by: Mathieu Lewis-Rolland</p></a>
+          <a href="https://www.mathieulewisrolland.com/bio" target="_blank">
+            <p>Photo by: Mathieu Lewis-Rolland</p>
+          </a>
         </div>
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_house_show.jpeg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR." width="1080px" height="800px">
-          <div class="carousel-caption">
-              <p>Live in a House</p>
-          </div>
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_house_show.jpeg"
+          alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner) playing for a house show in Portland, OR."
+          width="1080px" height="800px">
+        <div class="carousel-caption">
+          <p>Live in a House</p>
+        </div>
       </div>
 
       <div class="item">
-        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg" alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July." width="1200px" height="700px">
+        <img src="https://walkingstalkingrobots.com/img/walking_stalking_robots_fourth_of_july_show_side_profile.jpg"
+          alt="Walking Stalking Robots (Tarl Heddleston , Paul Hubbard and Scott Warner)  preforming on a stage for the US holiday Indenpence Day, or the Fourth of July."
+          width="1200px" height="700px">
         <div class="carousel-caption">
           <p> Fourth of July Show</p>
-          <a href="http://www.patrickluhrs.com" target="_blank"><p>Photo by: Patrick Luhrs</p></a>
+          <a href="http://www.patrickluhrs.com" target="_blank">
+            <p>Photo by: Patrick Luhrs</p>
+          </a>
         </div>
       </div>
 
@@ -97,60 +111,93 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-</div>
-<div id="music">
-</div>
-<div class='music'>
- <h2>Music</h2>
-  <div class='links'>
-  <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="https://walkingstalkingrobots.com/img/WSR_disc_img.jpg"></img><p>Demonstration</p></a>
   </div>
-      <div class="nav">
-        <!-- We don't really use Facebook at all anymore, so there is no point keeping it visible. 
-              But... to the nerdy individual who is reading these comments, I hope you enjoy the Philip K Dick Reference / play on a title of his. :) -->
-        <!-- <a href='https://www.facebook.com/dorobotssleepwithelectricdreams' target="_blank"><p>
-      			 <img src= "img/facebook.png" alt="Facebook Logo" /></a> -->
-           
-        <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/soundcloud.png" id="MusicStream" alt="Soundcloud Logo" /></a>
 
-        <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"><img src="img/icon_bandcamp.png" id="MusicStream" alt="Bandcamp Logo." /></a>
-      </div>
-  <a href="homePage.html"><p><u>TOP</u></p></a>
-</div>
+  <div id="music">
+  </div>
+  <div class='music'>
+    <h2>Music</h2>
+    <div class='links'>
+      <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img
+          src="https://walkingstalkingrobots.com/img/WSR_disc_img.jpg"></img>
+        <p>Demonstration</p>
+      </a>
+    </div>
+    <div class="nav">
+      <!-- We don't really use Facebook at all anymore, so there is no point keeping it visible. 
+              But... to the nerdy individual who is reading these comments, I hope you enjoy the Philip K Dick Reference / play on a title of his. :) -->
+      <!-- <a href='https://www.facebook.com/dorobotssleepwithelectricdreams' target="_blank"><p>
+      			 <img src= "img/facebook.png" alt="Facebook Logo" /></a> -->
+
+      <a href="https://soundcloud.com/walking-stalking-robots" target="_blank"><img src="img/soundcloud.png"
+          id="MusicStream" alt="Soundcloud Logo" /></a>
+
+      <a href="https://walkingstalkingrobots.bandcamp.com/releases" target="_blank"><img src="img/icon_bandcamp.png"
+          id="MusicStream" alt="Bandcamp Logo." /></a>
+    </div>
+    <a href="homePage.html">
+      <p><u>TOP</u></p>
+    </a>
+  </div>
 
   <div id="shows">
   </div>
-	<div class='learn-more'>
-	 <h2>Shows</h2>
-	  <div class='links'>
-	<a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank"><p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p></p>
+  <div class='learn-more'>
+    <h2>Shows</h2>
+    <div class='links'>
+      <a href="img/ScottBeer.jpg" alt="Scott drinking a beer." target="_blank">
+        <p>We have no shows to announce at this time. <p>We're too busy with other stuff...</p>
+        </p>
 
-    <!-- Here lies the last show we played. May it rest in rock heaven... I hope I get to go to rock heaven... Sounds pretty cool... -->
-   <!-- <a href="https://www.instagram.com/shanghaitunnelbar/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
+        <!-- Here lies the last show we played. May it rest in rock heaven... I hope I get to go to rock heaven... Sounds pretty cool... -->
+        <!-- <a href="https://www.instagram.com/shanghaitunnelbar/" target="_blank"><p>The Shanghai Tunnel Bar, November 8th, 2025</p><p>Portland OR.</p> -->
     </div>
-    <a href="homePage.html"><p><u>TOP</u></p></a>
-   </div>
-</a>
+    <a href="homePage.html">
+      <p><u>TOP</u></p>
+    </a>
   </div>
-    <div class='contact' id="contact">
-     <h2>How to Reach Out</h2>
-       <p>Please send any questions,</p>
-        <p>comments or song requests to</p>
-       <p><a href="mailto:walkingstalkingrobots@gmail.com"><u>walkingstalkingrobots@gmail.com</u></a></p>
+  </div>
+  
+  <div class='contact' id="contact">
+<!-- The Contact Section -->
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+  <h2 class="w3-wide w3-center">CONTACT</h2>
+  <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+  <div class="w3-row w3-padding-32">
+    <div class="w3-col m6 w3-large w3-margin-bottom">
+      <i class="fa fa-map-marker" style="width:30px"></i> Portland, US<br>
+      <i class="fa fa-envelope" style="width:30px"> </i> Email: walkingstalkingrobots@gmail.com<br>
+    </div>
+    <div class="w3-col m6">
+      <form action="/action_page.php" target="_blank">
+        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+          </div>
+          <div class="w3-half">
+            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+          </div>
+        </div>
+        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+        <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+      </form>
+    </div>
+  </div>
+</div>
+      <p><u>TOP</u></p>
+    </a>
+  </div>
 
-    <a href="homePage.html"><p><u>TOP</u></p></a>
-   </div>
+
+  <div class="footer">
+    <p> &copy; Walking Stalking Robots. 2014 - <span id="currentYear"></span></p>
+  </div>
 
 
-			<div class="footer">
-      <p> &copy; Walking Stalking Robots. 2014 - <span id="currentYear"></span></p>
-			</div>
-
-
-      <script>
-      $(document).ready(function(){
-        // Add smooth scrolling to all links in navbar + footer link
-        $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+  <script>
+    $(document).ready(function () {
+      // Add smooth scrolling to all links in navbar + footer link
+      $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
 
         // Make sure this.hash has a value before overriding default behavior
         if (this.hash !== "") {
@@ -165,18 +212,19 @@
           // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
           $('html, body').animate({
             scrollTop: $(hash).offset().top
-          }, 900, function(){
+          }, 900, function () {
 
             // Add hash (#) to URL when done scrolling (default click behavior)
             window.location.hash = hash;
-            });
-          } // End if
-        });
-      })
-      </script>
+          });
+        } // End if
+      });
+    })
+  </script>
 
 
-<script src="scripts/myscripts.js"></script>
+  <script src="scripts/myscripts.js"></script>
 
 </body>
+
 </html>
