--- a/website/homePage.html
+++ b/website/homePage.html
@@ -165,7 +165,7 @@
   <div class='contact' id="contact">
       <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
         <h2>CONTACT</h2>
-        <p><i class="fa fa-envelope" style="width:30px"> </i> Email: <a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a><br></p>
+        <p><i class="fa fa-envelope"> </i> Email: <a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a><br></p>
         <p><i>Feel Free To Reach Out</i></p>
             <form name="contact" method="POST" data-netlify="true">
               <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
