--- a/website/homePage.html
+++ b/website/homePage.html
@@ -163,9 +163,8 @@
   
   <!-- The Contact Section -->
   <div class='contact' id="contact">
-      <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+      <div class="w3-container w3-content" style="max-width:800px" id="contact">
         <h2>CONTACT</h2>
-        <p><i class="fa fa-envelope"> </i> Email: <a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a><br></p>
         <p><i>Feel Free To Reach Out</i></p>
             <form name="contact" method="POST" data-netlify="true">
               <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
@@ -179,6 +178,7 @@
               <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
               <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
             </form>
+            <p><i class="fa fa-envelope"> </i> Or feel free to email us directly at <a href="mailto:walkingstalkingrobots@gmail.com">walkingstalkingrobots@gmail.com</a><br></p>
       </div>
       <p><u>TOP</u></p>
     </a>
